<resources>
    <string name="app_name">Social Learning</string>
    <string name="title_home">Home</string>
    <string name="title_materi">Materi</string>
    <string name="title_kuis">Kuis</string>
    <string name="title_info">Info</string>
    <string name="sejarahkutai">Kerajaan Kutai berdiri pada tahun 400 Masehi, kerajaan ini adalah kerajaan Hindu tertua di Indonesia. Kerajaan Kutai terletak di Pulau Kalimantan, tepatnya di tepi sungai Mahakam, Kabupaten Muarakaman, Kalimantan Timur</string>
    <string name="sejarahkediri">Kerajaan Kediri terletak di tepi sungai Brantas, Kabupaten Kediri, Jawa Timur. Kerajaan ini mulai dikenal sejak pemerintahan Raja Bameswara tahun 1117 Masehi. Raja Kerajaan Kediri yang terkenal yaitu Jayabaya.</string>
    <string name="sejarahmajapahit">Kerajaan Majapahit terletak di Jawa Timur. Setelah jatuhnya Kerajaan Singosari, berdirilah Kerajaan Majapahit. Raden Wijaya mendirikan Kerajaan Majapahit tahun 1293 Masehi. Wilayah kekuasaan Majapahit meliputi hampir seluruh Nusantara ditambah Malaka dan Tumasik (Singapura). Kerajaan Majapahit mencapai kejayannya pada masa pemerintahan Hayam Wuruk dengan didampingi Patih Gajah Mada. Kehidupan rakyat Majapahit menjadi aman, damai, hidup makmur.</string>
    <string name="sejarahmataram">Kerajaan Medang (Kerajaan Mataram Kuno atau Kerajaan Mataram Hindu) adalah nama sebuah kerajaan yang berdiri di Jawa Tengah pada abad ke-8, kemudian berpindah ke Jawa Timur pada abad ke-10.\n\nKemunduran Mataram Kuno disebabkan karena kedudukan ibukota kerajaan yang semakin lemah dan tidak menguntungkan lagi antara lain:\n1) Tidak memiliki pelabuhan laut sehinga sulit berhubungan dengan dunia luar\n2) Sering dilanda bencana alam oleh letusan gunung merapi\n3) Mendapat ancaman serangan dari kerajaan Sriwijaya</string>
    <string name="sejarahsingasari">Kerajaan Singosari terletak disekitar Singosari, Malang, Jawa Timur. Kerajaan ini pertama kali didirikan oleh Ken Arok tahun 1222. Raja Kertanegara menjadi raja yang terbesar sekaligus raja terakhir Singosari.</string>
    <string name="sejarahtarumanegara">Kerajaan Tarumanegara terletak di dekat aliran sungai Citarum, Bogor, Jawa Barat. Kerajaan ini berdiri pada tahun 450 Masehi. Rakyat  Kerajaan Tarumanegara hidup aman dan tenteram dengan pertanian, peternakan, perikanan, perniagaan menjadi mata pencaharian pokok.</string>
    <string name="rajakutai1">Raja pertama dari kerajaan Kutai ialah Kudungga. Menurut para ahli sejarah, nama raja tersebut adalah nama asli orang Indonesia yang masih belum dipengaruhi budaya dari India.</string>
    <string name="rajakutai2">Raja Aswawarman menjadi raja kerajaan Kutai dikenal dengan sebutan Dewa Ansuman (Dewa Matahari). Aswawarman merupakan dari keturunan Kudungga. Aswawarman juga dikenal sebagai pendiri kerajaan Kutai sehingga dijuluki dengan gelar wangsakerta, yang berarti pembentuk keluarga.</string>
    <string name="rajakutai3">Raja Mulawarman merupakan raja terbesar yang paling berpengaruh di kerajaan Kutai sekaligus cucu Kudungga dan anak dari Aswawarman. Masa kejayaan kerajaan Kutai terjadi pada masa kepemimpinan Raja Mulawarman. Salah satu Yupa peninggalan kerajaan Kutai disebutkan Mulawarman sempat memberi hadiah 20.000 ekor sapi kepada para Brahmana. Sehingga, kerajaan Kutai dianggap memiliki peternakan yang sangat maju.</string>
    <string name="rajakediri1">Sri Bameswara adalah raja Kediri yang memerintah sekitar tahun 1117-1130. Nama gelar abhisekanya ialah Sri Maharaja Rakai Sirikan Sri Bameswara Sakalabhuwana Tustikarana Sarwaniwariwirya Parakrama Digjaya Uttunggadewa.</string>
    <string name="rajakediri2">Pemerintahan raja Jayabaya dianggap sebagai masa kejayaan Kerajaan Kediri. Jayabaya terkenal dengan ramalannya yang disebut Jangka Jayabaya. Ramalan Jayabaya itu diyakini berisi tentang masa depan bangsa Indonesia.</string>
    <string name="rajakediri3">Raja Sri Sarweswara memerintah pada tahun 1159 – 1161. Raja ini bergelar Sri Maharaja Rakai Sirikan Sri Sarweswara Janardanawatara Wijaya Agrajasama Singhadani Waryawirya Parakrama Digjaya Uttunggadewa.Sri Sarwaswera adalah salah satu raja Kediri yang terkenal sebagai raja yang sangat religius dan juga berbudaya. </string>
    <string name="rajakediri4">Sri Aryeswara adalah raja Kediri yang berkuasa pada tahun 1171 M. Raja ini bergelar Sri Maharaja Rake Hino Sri Aryeswara Madhusudanawatara Arijamuka. Pemerintahan Sri Aryeswara diketahui dari prasasti Angin, tanggal 23 Maret 1171.</string>
    <string name="rajakediri5">Raja Sri Gandra berkuasa pada 1811 M. Gelar yang dipangkunya adalah Sri Maharaja Koncaryadipa Handabhuwanapadalaka Parakrama Anindita Digjaya Uttunggadewa Sri Gandra.</string>
    <string name="rajakediri6">Sri Kameswara adalah raja ketujuh dari Kerajaan KediriMasa pemerintahan raja Sri Kameswara sekitar tahun 1180 M – 1190 M. Raja ini bergelar Sri Maharaja Sri Kameswara Triwikramawatara Aniwariwirya Anindhita Digjaya Uttunggadewa.Di masa pemerintahan Sri Kameswara seni sastra berkembang sangat pesat. Salah satunya adanya Kitab Smaradhana karangan dari Mpu Dharmaja.</string>
    <string name="rajakediri7">Raja Kertajaya merupakan raja terakhir Kediri yang memimpin sekitar tahun 1194-1222). Akhir pemerintahannya dikarenakan beliau dikalahkan oleh Ken Arok dari Tumapel atau Singhasari, dan menandai berakhirnya masa Kerajaan Kediri.</string>
    <string name="rajamajapahit1">Raden Wijaya merupakan keturunan dari Kerajaan Singosari yang melarikan diri saat pemberontakan Jayakatwang. Beliau lalu mendirikan Kerajaan Majapahit. </string>
    <string name="rajamajapahit2">Jayanagara diangkat menjadi raja muda untuk menggantikan ayahnya, Raden Wijaya. Pada awal pemerintahannya Jayanegara harus menghadapi sisa pemberontakan yang meletus dimasa ayahnya masih hidup. Selain pembrontakan Kuti dan Sumi, Raja Jayanegara diselamatkan oleh pasukan pengawal (Bhayangkari) yang dipimpin oleh Gajah Mada yang kemudian diungsikan ke Desa Bedager.</string>
    <string name="rajamajapahit3">Bhre Kahuripan merupakan adik perempuannya Jayanegara yang bergelar Tribuanatunggadewi Jayawishnuwardhani. Dari kitab Negarakertagama digambarkan adanya beberapa pemberontakan di masa pemerintahan Ratu Tribuanatunggadewi. Pembrontakan yang paling berbahaya adalah pemberontakan di Sadeng dan Keta pada tahun 1331. Namun pemberontakan itu pemberontakan itu dapat dipadamkan oleh Gajah Mada. Setelah itu Gajah Mada bersumpah di hadapan raja dan para pembesar kerajaan bahwa tidak akan amukti palapa (memakan buah palapa) sebelum dapat menundukan Nusantara.</string>
    <string name="rajamajapahit4">Kerajaan Majapahit mengalami masa kejayaannya pada kepemimpinan Hayam Wuruk. Beliau naik tahta menggantikan ibunya yaitu Tribhuwana Wijayatunggadewi. Patih Gajah Mada membantu kepemimpinan Hayam wuruk untuk terus memperluas wilayah kekuasaan Majapahit. Patih Gajah Mada mengucapkan sumpah yang terkenal yaitu Sumpah Palapa. Isi sumpah tersebut ialah cita-cita Gajah Mada mempersatukan nusantara dibawah kekuasaan Majapahit.</string>
    <string name="rajamajapahit5">Tahta kerajaan Majapahit diberikan oleh Hayam Wuruk pada menantunya yang bernama Wikramawardhana (suami dari putri mahkota Kusumawardhani).  Hayam Wuruk memiliki putra yang bernama Bhre Wirabhumi. Namun Bhre Wirabumi bukan anak dari permaisuri sehingga tidak berhak mewarisi tahta Kerajaan Majapahit. </string>
    <string name="rajamajapahit6">Suhita putra Wikramawardhana ditunjuk oleh Wikramawardhana untuk menggantikan sebagai raja Majapahit. Keputusan ini menimbulkan sengketa antara Wikramawarddhana dan Bhre Wirabhumi hingga terjadi peperangan. Perang dicatat dalam berita Cina Dinasti Ming dan catatan perjalanan Laksamana Cheng-Ho. Bhre Wirabumi terbunuh dan Suhita dapat kembali bertahta sampai dengan wafat tahun 1447.</string>
    <string name="rajamajapahit7">Suhita digantikan oleh adiknya Bhre Tumapel Dyah Kertawijaya karena tidak memiliki putra. Kertawijaya wafat pada tahun 1451</string>
    <string name="rajamajapahit8">Kertawijaya digantikan oleh Bhre Pamotan bergelar Sri Rajasawarddhana yang kemudian memindahkan kedudukannya di Keling-Kahuripan karena kondisi pusat kerajaan yang masih dikacaukan oleh perseteruan keluarga yang sebelumnya.</string>
    <string name="rajamajapahit9">Girishwardhana adalah anak dari Kertawijaya yang sebelumnya memerintah daerah Wengker. Dyah Suryawikrama Girindrawarddhana menaiki tahta kerajaan setelah tiga tahun Majapahit mengalami kekosongan kekuasaan (interregnum).</string>
    <string name="rajamajapahit10">Girishwardhana digantikan oleh putranya Bhre Pandan Salas/Dyah Suryaprabhawa Sri Singhawikramawarddhana. Konflik kemudian kembali muncul ketika Bhre Kertabhumi menyerbu Majapahit untuk mengambil kekuasaan. Kertabhumi adalah putra bungsu Rajasawarddhana. Suryaprabhawa kemudian menyingkir ke Daha dan memerintah sampai 1474</string>
    <string name="rajamajapahit11">Dyah Brawijaya merupakan raja terakhir yang diketahui pada masa Kerajaan Majapahit. Girindrawarddhana Dyah Brawijaya menggantikannya Suryaprabhawa namun berkedudukan di Keling, karena pusat kerajaan masih dikuasai oleh Kertabhumi.</string>
    <string name="rajamataram1">Sanjaya merupakan raja pertama dan pendiri Kerajaan Mataram Kuno. Sanjaya juga merupakan pendiri Wangsa Sanjaya yang menganut agama Hindu.</string>
    <string name="rajamataram2">Setelah wafatnya Sanjaya, Mataram Kuno di pimpin oleh Rakai Panangkaran yang menganut agama Budha beraliran Mahayana. Wangsa Syailendra lalu berkuasa di Kerajaan Mataram Kuno</string>
    <string name="rajamataram3">Rakai Panunggalan berjasa atas sistem kalender Jawa Kuno. Rakai Panunggalan juga selalu menjunjung tinggi ilmu pengetahuan</string>
    <string name="Peninggalanmataram"><b>Peninggalan Mataram Kuno</b></string>
    <string name="canggal">Prasasti ini disebut juga Prasasti Gunung Wukir atau Prasasti Sanjaya (732 M). Benda ini ditemukan di halaman Candi Gunung Wukir, Desa Kadiluwih, Salam, Magelang, Jawa Tengah. Prasasti ini memakai bahasa Pallawa dan Sansekerta</string>
    <string name="prambanan">Candi Prambanan adalah kompleks candi Hindu terbesar di Indonesia yang dibangun pada abad ke-9 masehi. Candi ini dipersembahkan untuk Trimurti, tiga dewa utama Hindu yaitu Brahma sebagai dewa pencipta, Wisnu sebagai dewa pemelihara, dan Siwa sebagai dewa pemusnah.\nBerdasarkan prasasti Siwagrha nama asli kompleks candi ini adalah Siwagrha (bahasa Sanskerta yang bermakna Rumah Siwa ), dan memang di garbagriha (ruang utama) candi ini bersemayam arca Siwa Mahadewa setinggi tiga meter yang menujukkan bahwa di candi ini dewa Siwa lebih diutamakan.</string>
    <string name="judul_hero">Social Learning</string>
    <string name="des_hero">Aplikasi ini digunakan sebagai bahan ajar materi Kerajaan Hindu yang dikhususkan untuk siswa SD kelas IV</string>
    <string name="tujuan_hero">1. Mempermudah Proses Pembelajaran\n2.Meningkatkan Efisiensi Proses Pembelajaran\n3.Menjadi Bahan Ajar Mandiri</string>
    <string name="des_tujuan_hero">1.Dengan membaca teks kerajaan Hindu, siswa dapat menyebutkan kerajaan Hindu di Indonesia.\n\n2.Dengan membaca teks kerajaan Hindu, siswa dapat menjelaskan sejarah kerajaan Hindu di Indonesia.\n\n3.Dengan membaca teks raja kerajaan Hindu, siswa dapat menyebutkan raja-raja kerajaan Hindu di Indonesia\n\n4.Dengan membaca teks raja kerajaan Hindu, siswa dapat menjelaskan raja-raja kerajaan Hindu di Indonesia\n\n5.Dengan membaca teks peninggalan kerajaan Hindu, siswa dapat menyebutkan peninggalan kerajaan Hindu.</string>
    <string name="kompetensi">3.4 Mengidentifikasi kerajaan Hindu, Buddha dan Islam serta pengaruhnya pada kehidupan masyarakat masa kini di lingkungan daerah setempat.\n\n4.4 Menyajikan hasil identifikasi kerajaan Hindu, Buddha dan Islam serta pengaruhnya pada kehidupan masyarakat masa kini di lingkungan daerah setempat.
</string>
</resources>