<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:id="@+id/scroll_awal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_awal1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:cardCornerRadius="8dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/hero_awal"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginTop="32dp"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_home_black_24dp"
                        tools:ignore="ContentDescription,HardcodedText" />

                    <TextView
                        android:id="@+id/judul_awal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/hero_awal"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/judul_hero"
                        android:textSize="24sp"
                        android:layout_marginBottom="16dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/judul_awal"
                        android:layout_marginBottom="16dp"
                        android:paddingStart="32dp"
                        android:paddingEnd="32dp"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:text="@string/des_hero"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/card_awal2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_awal1"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/tujuan_hero"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@drawable/bg_white"
                    android:text="@string/des_tujuan_hero"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/rv_lay2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/card_awal2"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/kompetensi"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/bg_white">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/kompetensi_hand_tools"
                        android:textSize="16sp" />
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_kasus"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:clickable="true"
                        android:background="@drawable/bg_white"
                        android:foreground="?android:selectableItemBackground"
                        android:focusable="true">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="8dp">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:orientation="vertical"
                                android:padding="8dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="Cara Menggunakan Aplikasi"
                                    android:textSize="14sp" />

                            </LinearLayout>

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:scaleType="fitCenter"
                                android:src="@drawable/next"
                                android:padding="8dp"
                                tools:ignore="ContentDescription" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>



        </RelativeLayout>
    </ScrollView>
</RelativeLayout>