<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_white"
    tools:context=".ui.materi.mataram.Tabsmataram">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/yellow3"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/Peninggalanmataram"
                    android:textAlignment="center"
                    android:textColor="@color/color_dark"
                    android:textSize="16sp" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="168dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/canggal" />
                <com.github.florent37.expansionpanel.ExpansionHeader
                    android:id="@+id/sampleHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:expansion_headerIndicator="@id/headerIndicator"
                    app:expansion_layout="@id/expansionLayout"
                    app:expansion_toggleOnClick="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/yellow3"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="4dp"
                            android:elevation="4dp"
                            android:text="Prasasti Canggal"
                            android:textColor="@color/color_darkprime"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="RelativeOverlap" />


                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/headerIndicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/expansion_header" />

                    </RelativeLayout>
                </com.github.florent37.expansionpanel.ExpansionHeader>
                <com.github.florent37.expansionpanel.ExpansionLayout
                    android:id="@+id/expansionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:expansion_expanded="false">

                    <LinearLayout
                        android:id="@+id/container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-12dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/bg_white"
                            android:elevation="2dp"
                            android:lineSpacingMultiplier="1.5"
                            android:paddingStart="8dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="8dp"
                            android:text="@string/canggal"
                            android:textColor="@color/color_dark"
                            android:textSize="16sp"/>

                    </LinearLayout>
                </com.github.florent37.expansionpanel.ExpansionLayout>


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="168dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/prambanan" />
                <com.github.florent37.expansionpanel.ExpansionHeader
                    android:id="@+id/sampleHeader38"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:expansion_headerIndicator="@id/headerIndicator38"
                    app:expansion_layout="@id/expansionLayout38"
                    app:expansion_toggleOnClick="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/yellow3"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="4dp"
                            android:elevation="4dp"
                            android:text="Candi Prambanan"
                            android:textColor="@color/color_darkprime"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="RelativeOverlap" />


                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/headerIndicator38"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/expansion_header" />

                    </RelativeLayout>
                </com.github.florent37.expansionpanel.ExpansionHeader>
                <com.github.florent37.expansionpanel.ExpansionLayout
                    android:id="@+id/expansionLayout38"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:expansion_expanded="false">

                    <LinearLayout
                        android:id="@+id/container38"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-12dp"
                            android:layout_marginBottom="2dp"
                            android:background="@drawable/bg_white"
                            android:elevation="2dp"
                            android:lineSpacingMultiplier="1.5"
                            android:paddingStart="8dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="8dp"
                            android:text="@string/prambanan"
                            android:textColor="@color/color_dark"
                            android:textSize="16sp"/>

                    </LinearLayout>
                </com.github.florent37.expansionpanel.ExpansionLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:textColor="@color/color_darkprime"
                    android:textSize="32sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>